--- a/catalog.html
+++ b/catalog.html
@@ -39,7 +39,7 @@
           <ul class="navigation-list">
             <li class="navigation-item"><a class="navigation-link" href="index.html">Главная</a></li>
             <li class="navigation-item"><a class="navigation-link" href="">Компания</a></li>
-            <li class="navigation-item"><a class="current">Каталог</a></li>
+            <li class="navigation-item"><a class="navigation-link current">Каталог</a></li>
             <li class="navigation-item"><a class="navigation-link" href="">Новости</a></li>
             <li class="navigation-item"><a class="navigation-link" href="">Спецпредложения</a></li>
             <li class="navigation-item"><a class="navigation-link" href="">Доставка</a></li>
@@ -51,15 +51,15 @@
     <main class="page-content">
       <div class="container">
         <ul class="breadcrumbs">
-          <li class="breadcrumbs-item-home"><a href="index.html"> <img src="" alt="home"></a></li>
+          <li class="breadcrumbs-item home"><a href="index.html"> <img src="" alt="home"></a></li>
           <li class="breadcrumbs-item"><a href="">Каталог </a></li>
           <li class="breadcrumbs-item"><a href="">Инструмент</a></li>
           <li class="breadcrumbs-item"><a class="current">Перфораторы</a></li>
         </ul>
         <h1>Перфораторы</h1>
         <aside class="aside">
-          <p class="filter">ФИЛЬТР:</p>
-          <form action="" method="get">
+          <p class="filter">фильтр:</p>
+          <form action="https://echo.htmlacademy.ru/courses" method="get">
             <fieldset class="choose-filter-0">
               <legend>цена:</legend>
               <div class="choose-price">
@@ -70,7 +70,7 @@
               <div class="line"></div>
               <div class="price-number"></div>
             </fieldset>
-            <fieldset class="choose-filter-1">
+            <fieldset class="choose-filter">
               <legend>Производители:</legend>
               <p>
                 <input type="checkbox" name="bosch" id="bosch">
@@ -93,7 +93,7 @@
                 <label for="hitachi">hitachi</label>
               </p>
             </fieldset>
-            <fieldset class="choose-filter-2">
+            <fieldset class="choose-filter">
               <legend>питание:</legend>
               <p>
                 <input type="radio" name="charge" value="accum" id="accum">
@@ -109,11 +109,16 @@
         </aside>
         <section class="goods catalog">
           <div class="sort">
-            <div class="sort-to">сортировка:</div>
-            <div class="sort-to-type">по цене</div>
-            <div class="sort-to-functional">по функионалу</div>
-            <div class="sort-to-up"></div>
-            <div class="sort-to-down"></div>
+            <p class="sort-to">сортировка:</p>
+            <ul>
+              <li class="sort-to-price"><a href="">по цене</a></li>
+              <li class="sort-to-type"><a href="">по типу</a></li>
+              <li class="sort-to-functional"><a href="">по функионалу</a></li>
+            </ul>
+            <ul>
+              <li class="sort-to-up"><a href=""></a></li>
+              <li class="sort-to-down"><a href=""></a></li>
+            </ul>
           </div>
           <div class="goods-item"><a href=""><img src="" alt=""></a>
             <h3 class="title">Перфоратор BOSCH BFG 3000</h3>
