--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
         <nav class="navigation">
           <ul class="navigation-list">
-            <li class="navigation-item"><a class="current">Главная</a></li>
+            <li class="navigation-item"><a class="navigation-link current">Главная</a></li>
             <li class="navigation-item"><a class="navigation-link" href="">Компания</a></li>
             <li class="navigation-item"><a class="navigation-link" href="catalog.html">Каталог</a></li>
             <li class="navigation-item"><a class="navigation-link" href="">Новости</a></li>
@@ -43,9 +43,9 @@
         </nav>
       </div>
     </header>
-    <main class="content">
+    <main class="page-content">
       <section class="categories">
-        <div class="left-category">
+        <div class="left-column">
           <div class="item material">
             <h3></h3><a href=""></a>
           </div>
@@ -61,12 +61,15 @@
               <h3>Дрели</h3>
               <p>Соседям на радость!</p><a href="catalog.html"></a>
             </div>
-            <div class="controls"></div>
-            <button></button>
-            <button></button>
+            <div class="controls">
+              <button class="dot" type="submit"></button>
+              <button class="dot" type="submit"></button>
+            </div>
+            <button class="prev" type="submit"></button>
+            <button class="next" type="submit"></button>
           </div>
         </div>
-        <div class="right-category">
+        <div class="right-column">
           <div class="item technic">
             <h3></h3><a href=""></a>
           </div>
@@ -78,8 +81,8 @@
           </div>
         </div>
       </section>
-      <section class="popular-products">
-        <header class="popular-goods">
+      <section class="popular products">
+        <header class="popular-header">
           <h3>Популярные товары:</h3><a href="">все популярные товары</a>
         </header>
         <div class="goods">
@@ -103,62 +106,64 @@
             <p class="price">12500 Р.</p>
           </div>
         </div>
-        <div class="popular-manufacturer">
-          <h3>Популярные Производители:</h3><a href="">все производители</a>
-        </div>
-        <div class="manufacturers">
-          <div class="manufacturers-item"><a href=""><img src="" alt=""></a></div>
-          <div class="manufacturers-item"><a href=""><img src="" alt=""></a></div>
-          <div class="manufacturers-item"><a href=""><img src="" alt=""></a></div>
-          <div class="manufacturers-item"><a href=""><img src="" alt=""></a></div>
-          <div class="manufacturers-item"><a href=""><img src="" alt=""></a></div>
-          <div class="manufacturers-item"><a href=""><img src="" alt=""></a></div>
-          <div class="manufacturers-item"><a href=""><img src="" alt=""></a></div>
-          <div class="manufacturers-item"><a href=""><img src="" alt=""></a></div>
-        </div>
       </section>
-      <div class="content-services">
+      <section class="popular manufacturer">
+        <header class="popular-header">
+          <h3>Популярные Производители:</h3><a href="">все производители</a>
+        </header>
+        <ul class="manufacturers">
+          <li class="manufacturers-item"><a href="" target="_blank"><img src="" alt=""></a></li>
+          <li class="manufacturers-item"><a href="" target="_blank"><img src="" alt=""></a></li>
+          <li class="manufacturers-item"><a href="" target="_blank"><img src="" alt=""></a></li>
+          <li class="manufacturers-item"><a href="" target="_blank"><img src="" alt=""></a></li>
+          <li class="manufacturers-item"><a href="" target="_blank"><img src="" alt=""></a></li>
+          <li class="manufacturers-item"><a href="" target="_blank"><img src="" alt=""></a></li>
+          <li class="manufacturers-item"><a href="" target="_blank"><img src="" alt=""></a></li>
+          <li class="manufacturers-item"><a href="" target="_blank"><img src="" alt=""></a></li>
+        </ul>
+      </section>
+      <div class="company-info-wrapper">
         <div class="service">
           <h3>Сервисы</h3>
           <p>Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
           <div class="wrapper">
             <ul class="service-tab-nav">
-              <li class="service-tab-item" data-name="1"></li><a href="">Доставка</a>
-              <li class="service-tab-item" data-name="2">Гарантия</li>
-              <li class="service-tab-item" data-name="3">Кредит</li>
+              <li class="service-tab-item" data-name="1"><a href="">Доставка</a></li>
+              <li class="service-tab-item" data-name="2"> <a href="">Гарантия</a></li>
+              <li class="service-tab-item" data-name="3"> <a href="">Кредит</a></li>
             </ul>
             <div class="service-tab-content">
-              <div class="service-tab-item">
+              <div class="service-tab-item deliverity">
                 <h3>Доставка</h3>
-                <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p><img src="" alt="">
+                <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
               </div>
-              <div class="service-tab-item">
+              <div class="service-tab-item guarantee">
                 <h3>Гарантия</h3>
-                <p>Если купленный у нас товар поломается или заискрит, а также в случае пожара, спровоцированного его возгоранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. Дом уж восстановите как-нибудь сами.</p><img src="" alt="">
+                <p>Если купленный у нас товар поломается или заискрит, а также в случае пожара, спровоцированного его возгоранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. Дом уж восстановите как-нибудь сами.</p>
               </div>
-              <div class="service-tab-item">
+              <div class="service-tab-item credit">
                 <h3>Кредит</h3>
-                <p>Залезть в долговую яму стало проще! Кредитные консультанты придут вам на помощь.</p><a href="">отправить заявку</a><img src="" alt="">
+                <p>Залезть в долговую яму стало проще! Кредитные консультанты придут вам на помощь.</p><a href="">отправить заявку</a>
               </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="content-about">
-        <div class="company">
-          <h2>Компания "Техномарт"</h2>
-          <p class="company-text">Настоящий мужской шопинг начинается здесь! огромный выбор товаровдля ремонта и строительства не оставит равнодушным любителей сэкономить на гастарбайтерах. </p>
-          <p class="company-text">Мы можемдоставить ваш товар в самые отдельные точки России! Техномарт работает со многими ранспортными компаниями:</p>
-          <ul class="partners">
-            <li class="partner">Деловые линии</li>
-            <li class="partner">Автотрейдинг</li>
-            <li class="partner">ЖелДорЭкспедиция</li>
-          </ul><a href="about.html">Подробнее о компании </a>
-        </div>
-        <div class="contacts">
-          <h2>Контакты</h2>
-          <p>можете выбрать товар сами, заехав в наш офис:</p>
-          <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Af7942402afd77c97127f6b87a4f2f23d35437ba63bd0ca024083946f659745f8&amp;amp;source=constructor" width="300" height="158" frameborder="0"></iframe><a href="">Заблудились? Напишите нам!</a>
+        <div class="about">
+          <div class="company">
+            <h2>Компания "Техномарт"</h2>
+            <p class="text">Настоящий мужской шопинг начинается здесь! огромный выбор товаровдля ремонта и строительства не оставит равнодушным любителей сэкономить на гастарбайтерах. </p>
+            <p class="text">Мы можемдоставить ваш товар в самые отдельные точки России! Техномарт работает со многими ранспортными компаниями:</p>
+            <ul class="partners">
+              <li class="partner">Деловые линии</li>
+              <li class="partner">Автотрейдинг</li>
+              <li class="partner">ЖелДорЭкспедиция</li>
+            </ul><a href="about.html">Подробнее о компании </a>
+          </div>
+          <div class="contacts">
+            <h2>Контакты</h2>
+            <p>можете выбрать товар сами, заехав в наш офис:</p>
+            <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Af7942402afd77c97127f6b87a4f2f23d35437ba63bd0ca024083946f659745f8&amp;amp;source=constructor" width="300" height="158" frameborder="0"></iframe><a href="">Заблудились? Напишите нам!</a>
+          </div>
         </div>
       </div>
     </main>
