--- a/catalog.html
+++ b/catalog.html
@@ -2,8 +2,8 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="css/style.css">
     <title>HTML Academy: Техномарт Каталог</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="page">
     <header class="page-header">
@@ -12,12 +12,27 @@
           <div class="logo-top"><img src="img/logo-technomart.svg" alt="logo"></div>
           <div class="search">
             <form action="search.html" method="get">
+              <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17">
+                <path fill="#ffffff" d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z"></path>
+              </svg>
               <input type="text" placeholder="Поиск:">
-              <button type="submit"></button>
+              <label for="search"></label>
             </form>
           </div>
-          <div class="bookmarks">Закладки:<span>0</span></div>
-          <div class="mart">Корзина:<span>10</span></div>
+          <div class="bookmarks">
+            <svg xmlns="http://www.w3.org/2000/svg" width="14" height="16" viewBox="0 0 14 16">
+              <path fill="#ffffff" d="M14 15c0 .55-.368.741-.818.426l-5.363-3.765c-.45-.315-1.187-.315-1.637 0L.818 15.426C.368 15.741 0 15.55 0 15V1c0-.55.45-1 1-1h12c.55 0 1 .45 1 1v14z"></path>
+            </svg>
+            <p>Закладки:</p><span>0</span>
+          </div>
+          <div class="cart">
+            <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 15 15">
+              <circle fill="#ffffff" cx="4.5" cy="13.5" r="1.5"></circle>
+              <circle fill="#ffffff" cx="12.5" cy="13.5" r="1.5"></circle>
+              <path fill="#ffffff" d="M15 2H4.07l-.422-2H0v2h2.031l1.985 9H15V9H9.441L15 6.951z"></path>
+            </svg>
+            <p>Корзина:</p><span>10</span>
+          </div>
           <div class="order">Оформить заказ</div>
         </div>
         <div class="middle-row">
@@ -28,7 +43,14 @@
           <div class="address"><a href="tel:+78125550555">+7 (812) 555-05-55</a>
             <p>г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8</p>
           </div>
-          <div class="authorization"><a href="customer.html">Равшан Джамшутович</a>
+          <div class="authorization">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="18" viewBox="0 0 20 18">
+              <path fill="#c5c5c5" d="M17.881 14.166c-2.144-.735-4.256-1.666-5.207-2.39-.657-.501-.77-1.618-.517-2.415 1.118-.903 1.864-2.477 1.864-4.278C14.021 2.276 12.221 0 10 0S5.979 2.276 5.979 5.083c0 1.801.746 3.374 1.863 4.277.253.798.141 1.915-.517 2.416-.95.724-3.063 1.654-5.207 2.39S0 18 0 18h20s.025-3.099-2.119-3.834z"></path>
+            </svg><a href="customer.html">Равшан Джамшутович</a>
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="17" viewBox="0 0 20 17">
+              <path fill="#c5c5c5" d="M14.875 8.5L6 0v6H0v5h6v6z"></path>
+              <path fill="#c5c5c5" d="M16.986 15.01h-5.027V17h5.027c2.178 0 3.004-1.81 3.029-3.026V3.028C19.99 1.811 19.164 0 16.986 0h-5.027v1.99h5.027c.839 0 .992.681 1.01 1.057v10.904c-.017.376-.171 1.059-1.01 1.059z"></path>
+            </svg>
             <ul>
               <li><a href="">Мои Заказы</a></li>
               <li><a href="">Личный кабинет</a></li>
@@ -51,7 +73,7 @@
     <main class="page-content">
       <div class="container">
         <ul class="breadcrumbs">
-          <li class="breadcrumbs-item home"><a href="index.html"> <img src="img/icon-home.svg" alt="home"></a></li>
+          <li class="breadcrumbs-item home"><a href="index.html"><img src="img/icon-home.svg" alt="home"></a></li>
           <li class="breadcrumbs-item"><a href="">Каталог</a></li>
           <li class="breadcrumbs-item"><a href="">Инструмент</a></li>
           <li class="breadcrumbs-item"><a class="current">Перфораторы</a></li>
@@ -73,15 +95,15 @@
             <fieldset class="choose-filter">
               <legend>Производители:</legend>
               <p>
-                <input type="checkbox" name="bosch" id="bosch">
+                <input type="checkbox" name="bosch" id="bosch" checked>
                 <label for="bosch">bosch</label>
               </p>
               <p>
                 <input type="checkbox" name="interscol" id="interscol">
-                <label for="">интерскол</label>
+                <label for="interscol">интерскол</label>
               </p>
               <p>
-                <input type="checkbox" name="makita" id="makita">
+                <input type="checkbox" name="makita" id="makita" checked>
                 <label for="makita">makita</label>
               </p>
               <p>
@@ -96,7 +118,7 @@
             <fieldset class="choose-filter">
               <legend>питание:</legend>
               <p>
-                <input type="radio" name="charge" value="accum" id="accum">
+                <input type="radio" name="charge" value="accum" id="accum" checked>
                 <label for="accum">аккумуляторные</label>
               </p>
               <p> 
@@ -115,9 +137,9 @@
               <li class="sort-to-type"><a href="">по типу</a></li>
               <li class="sort-to-functional"><a href="">по функионалу</a></li>
             </ul>
-            <ul>
-              <li class="sort-to-up"><a href=""></a></li>
-              <li class="sort-to-down"><a href=""></a></li>
+            <ul class="arrows"> 
+              <li class="arrow-item-up"><a href="">up</a></li>
+              <li class="arrow-item-down"><a href="">down</a></li>
             </ul>
           </div>
           <div class="goods-item"><a href=""><img src="img/Perforator_3000.jpg" alt="Perforator_3000"></a>
@@ -200,9 +222,23 @@
         </div>
         <div class="bottom-row">
           <p>© 2010-2017 Компания "Техномарт" Все права защищены</p>
-          <div class="social-vk"></div>
-          <div class="social-facebook"></div>
-          <div class="social-instagram"></div>
+          <section class="socials">
+            <div class="social-item vk">
+              <svg xmlns="http://www.w3.org/2000/svg" width="26" height="15" viewBox="0 0 26 15">
+                <path fill="#FFF" d="M16.138 11.51c.956-.309 2.18 2.04 3.483 2.939.978.681 1.727.534 1.727.534l3.473-.05s1.815-.112.957-1.554c-.071-.12-.503-1.069-2.585-3.022-2.177-2.043-1.882-1.712.739-5.244 1.597-2.153 2.236-3.468 2.036-4.028-.192-.539-1.365-.399-1.365-.399L20.69.713c-.381.001-.704.119-.851.515-.003.004-.621 1.666-1.445 3.079-1.741 2.989-2.436 3.148-2.724 2.961-.661-.433-.494-1.737-.494-2.664 0-2.897.432-4.105-.846-4.417-.427-.104-.739-.172-1.828-.182-1.392-.021-2.574 0-3.244.329-.445.223-.786.712-.579.74.26.035.843.16 1.155.586.401.552.389 1.789.389 1.789s.229 3.411-.54 3.834c-.528.29-1.25-.302-2.803-3.016-.793-1.388-1.392-2.922-1.392-2.922s-.116-.285-.326-.441c-.25-.185-.6-.244-.6-.244L.848.684S.29.7.085.946c-.182.218-.015.668-.015.668s2.909 6.881 6.203 10.347c3.02 3.182 6.452 2.971 6.452 2.971h1.555s.469-.054.709-.312c.224-.24.214-.691.214-.691s-.031-2.109.935-2.419z"></path><a href="vk.com" target="_blank"></a>
+              </svg>
+            </div>
+            <div class="social-item facebook">
+              <svg xmlns="http://www.w3.org/2000/svg" width="12" height="22" viewBox="0 0 12 22">
+                <path fill="#FFF" d="M12 4V0H8a4 4 0 0 0-4 4v4H0v4h4v10h4V12h4V8H8V4h4z"></path><a href="facebook.com" target="_blank"></a>
+              </svg>
+            </div>
+            <div class="social-item instagram">
+              <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21">
+                <path fill="#FFF" d="M18 0H3C1.35 0 0 1.35 0 3v15c0 1.65 1.35 3 3 3h15c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3zm-7.5 7c1.93 0 3.5 1.57 3.5 3.5S12.43 14 10.5 14 7 12.43 7 10.5 8.57 7 10.5 7zM18 18H3V9h1.181A6.504 6.504 0 0 0 4 10.5a6.5 6.5 0 1 0 13 0 6.45 6.45 0 0 0-.181-1.5H18v9zm0-11h-4V3h4v4z"></path><a href="instagram.com" target="_blank"></a>
+              </svg>
+            </div>
+          </section>
           <p>Обратная связь</p><a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a><a href="https://htmlacademy.ru/intensive/htmlcss" target="_blank">Разработано htmlacademy.ru</a>
         </div>
       </div>
