--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="css/style.css">
     <title>HTML Academy: Техномарт Главная</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="page">
     <header class="page-header">
@@ -12,13 +12,27 @@
           <div class="logo-top"><img src="img/logo-technomart.svg" alt="logo"></div>
           <div class="search">
             <form action="search.html" method="get">
-              <input type="image" src="img/icon-search.svg" alt="search">
-              <input type="text" placeholder="Поиск:">
-              <button type="submit"></button>
+              <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17">
+                <path fill="#ffffff" d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z"></path>
+              </svg>
+              <input type="text" id="search" placeholder="Поиск:">
+              <label for="search"></label>
             </form>
           </div>
-          <div class="bookmarks">Закладки:<span>0</span></div>
-          <div class="cart">Корзина:<span>0</span></div>
+          <div class="bookmarks">
+            <svg xmlns="http://www.w3.org/2000/svg" width="14" height="16" viewBox="0 0 14 16">
+              <path fill="#ffffff" d="M14 15c0 .55-.368.741-.818.426l-5.363-3.765c-.45-.315-1.187-.315-1.637 0L.818 15.426C.368 15.741 0 15.55 0 15V1c0-.55.45-1 1-1h12c.55 0 1 .45 1 1v14z"></path>
+            </svg>
+            <p>Закладки:</p><span>0</span>
+          </div>
+          <div class="cart">
+            <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 15 15">
+              <circle fill="#ffffff" cx="4.5" cy="13.5" r="1.5"></circle>
+              <circle fill="#ffffff" cx="12.5" cy="13.5" r="1.5"></circle>
+              <path fill="#ffffff" d="M15 2H4.07l-.422-2H0v2h2.031l1.985 9H15V9H9.441L15 6.951z"></path>
+            </svg>
+            <p>Корзина:</p><span>0</span>
+          </div>
           <div class="order">Оформить заказ</div>
         </div>
         <div class="middle-row">
@@ -29,7 +43,12 @@
           <div class="address"><a href="tel:+78125550555">+7 (812) 555-05-55</a>
             <p>г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8</p>
           </div>
-          <div class="authorization"><a href="login.html">Войти</a><a href="registration.html">Регистриция</a></div>
+          <div class="authorization">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="17" viewBox="0 0 20 17">
+              <path fill="#c5c5c5" d="M14.875 8.5L6 0v6H0v5h6v6z"></path>
+              <path fill="#c5c5c5" d="M16.986 15.01h-5.027V17h5.027c2.178 0 3.004-1.81 3.029-3.026V3.028C19.99 1.811 19.164 0 16.986 0h-5.027v1.99h5.027c.839 0 .992.681 1.01 1.057v10.904c-.017.376-.171 1.059-1.01 1.059z"></path>
+            </svg><a href="login.html">Войти</a><a href="registration.html">Регистриция</a>
+          </div>
         </div>
         <nav class="navigation">
           <ul class="navigation-list">
@@ -47,44 +66,49 @@
     <main class="page-content">
       <section class="categories">
         <div class="left-column">
-          <div class="item material">
-            <h3></h3><a href=""></a>
+          <div class="categories-item material">
+            <h3>материалы</h3><a class="click" href="">на любой вкус</a>
+            <div class="item-icon-material"></div>
           </div>
-          <div class="item tool">
-            <h3></h3><a href=""></a>
+          <div class="categories-item tool">
+            <h3>инструмент</h3><a class="click" href="">на все случаи</a>
+            <div class="item-icon-tool"></div>
           </div>
-          <div class="item slider">
+          <div class="categories-item slider">
             <div class="slider-item">
               <h3>Перфораторы</h3>
-              <p>Настоящие мужские игрушки</p><a href="catalog.html"></a>
+              <p>Настоящие мужские игрушки</p><a class="btn" href="catalog.html">Открыть каталог</a>
             </div>
             <div class="slider-item">
               <h3>Дрели</h3>
-              <p>Соседям на радость!</p><a href="catalog.html"></a>
+              <p>Соседям на радость!</p><a class="btn" href="catalog.html">Открыть каталог</a>
             </div>
             <div class="controls">
-              <button class="dot" type="submit"></button>
-              <button class="dot" type="submit"></button>
+              <button class="dot active" type="button"></button>
+              <button class="dot" type="button"></button>
             </div>
-            <button class="prev" type="submit"></button>
-            <button class="next" type="submit"></button>
+            <button class="prev" type="button"></button>
+            <button class="next" type="button"></button>
           </div>
         </div>
         <div class="right-column">
-          <div class="item technic">
-            <h3></h3><a href=""></a>
+          <div class="categories-item technic">
+            <h3>техника</h3><a class="click" href="">для стройки</a>
+            <div class="item-icon-technic"></div>
           </div>
-          <div class="item sale">
-            <h3></h3><a href=""></a>
+          <div class="categories-item sale">
+            <h3>скидка 50%</h3><a class="click" href="">на 350 товаров</a>
+            <div class="item-icon-sale"></div>
           </div>
-          <div class="item delivery">
-            <h3></h3><a href=""></a>
+          <div class="categories-item delivery">
+            <h3>доставка</h3><a class="click" href="">бесплатно</a>
+            <div class="item-icon-delivery"></div>
           </div>
         </div>
       </section>
       <section class="popular products">
         <header class="popular-header">
-          <h3>Популярные товары:</h3><a href="">все популярные товары</a>
+          <h3>Популярные товары:</h3><a class="btn" href="">все популярные товары</a>
         </header>
         <div class="goods">
           <div class="goods-item"><a href=""><img src="img/Perforator_9000.jpg" alt="Perforator_9000"></a>
@@ -110,17 +134,17 @@
       </section>
       <section class="popular manufacturer">
         <header class="popular-header">
-          <h3>Популярные Производители:</h3><a href="">все производители</a>
+          <h3>Популярные Производители:</h3><a class="btn" href="">все производители</a>
         </header>
         <ul class="manufacturers">
-          <li class="manufacturers-item"><a href="" target="_blank"><img src="img/bosch.jpg" alt="bosch"></a></li>
-          <li class="manufacturers-item"><a href="" target="_blank"><img src="img/Makita.jpg" alt="Makita"></a></li>
-          <li class="manufacturers-item"><a href="" target="_blank"><img src="img/DeWALT.jpg" alt="DeWALT"></a></li>
-          <li class="manufacturers-item"><a href="" target="_blank"><img src="img/Интерскол.jpg" alt="Интерскол"></a></li>
-          <li class="manufacturers-item"><a href="" target="_blank"><img src="img/Hitachi.jpg" alt="Hitachi"></a></li>
-          <li class="manufacturers-item"><a href="" target="_blank"><img src="img/LG.jpg" alt="LG"></a></li>
-          <li class="manufacturers-item"><a href="" target="_blank"><img src="img/AEG.jpg" alt="AEG"></a></li>
-          <li class="manufacturers-item"><a href="" target="_blank"><img src="img/Metabo.jpg" alt="Metabo"></a></li>
+          <li class="manufacturers-item"><a href="" target="_blank"><img src="img/bosch.png" alt="bosch"></a></li>
+          <li class="manufacturers-item"><a href="" target="_blank"><img src="img/Makita.png" alt="Makita"></a></li>
+          <li class="manufacturers-item"><a href="" target="_blank"><img src="img/DeWALT.png" alt="DeWALT"></a></li>
+          <li class="manufacturers-item"><a href="" target="_blank"><img src="img/Интерскол.png" alt="Интерскол"></a></li>
+          <li class="manufacturers-item"><a href="" target="_blank"><img src="img/Hitachi.png" alt="Hitachi"></a></li>
+          <li class="manufacturers-item"><a href="" target="_blank"><img src="img/LG.png" alt="LG"></a></li>
+          <li class="manufacturers-item"><a href="" target="_blank"><img src="img/AEG.png" alt="AEG"></a></li>
+          <li class="manufacturers-item"><a href="" target="_blank"><img src="img/Metabo.png" alt="Metabo"></a></li>
         </ul>
       </section>
       <div class="company-info-wrapper">
@@ -158,19 +182,29 @@
               <li class="partner">Деловые линии</li>
               <li class="partner">Автотрейдинг</li>
               <li class="partner">ЖелДорЭкспедиция</li>
-            </ul><a href="about.html">Подробнее о компании </a>
+            </ul><a class="btn" href="about.html">Подробнее о компании </a>
           </div>
           <div class="contacts">
             <h2>Контакты</h2>
             <p>можете выбрать товар сами, заехав в наш офис:</p>
-            <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Af7942402afd77c97127f6b87a4f2f23d35437ba63bd0ca024083946f659745f8&amp;amp;source=constructor" width="300" height="158" frameborder="0"></iframe><a href="">Заблудились? Напишите нам!</a>
+            <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Af7942402afd77c97127f6b87a4f2f23d35437ba63bd0ca024083946f659745f8&amp;amp;source=constructor" width="300" height="158" frameborder="0"></iframe><a class="btn" href="">Заблудились? Напишите нам!</a>
           </div>
           <div class="send-form">
             <form action="https://echo.htmlacademy.ru/courses" method="post">
-              <label for="introduce">Ваше имя:</label>
-              <input type="text" name="introduce" placeholder="Представьтесь, пожалуйста">
+              <p class="name-half-width">
+                <label for="introduce">Ваше имя:</label>
+                <input type="text" name="introduce" placeholder="Имя Фамилия">
+              </p>
+              <p class="e-mail half-width">
+                <label for="e-mail">Ваш e-mail:</label>
+                <input type="text" name="e-mail" placeholder="email@example.com">
+              </p>
+              <p class="send-text full-width">
+                <label for="send-text">Текст письма:</label>
+                <input type="text" name="send-text" placeholder="В свободной форме">
+              </p>
               <div class="button">
-                <button type="submit">отправить</button>
+                <button class="btn" type="submit">отправить</button>
               </div>
             </form>
           </div>
@@ -200,9 +234,23 @@
         </div>
         <div class="bottom-row">
           <p>© 2010-2017 Компания "Техномарт" Все права защищены</p>
-          <div class="social-vk"></div>
-          <div class="social-facebook"></div>
-          <div class="social-instagram"></div>
+          <section class="socials">
+            <div class="social-item vk">
+              <svg xmlns="http://www.w3.org/2000/svg" width="26" height="15" viewBox="0 0 26 15">
+                <path fill="#FFF" d="M16.138 11.51c.956-.309 2.18 2.04 3.483 2.939.978.681 1.727.534 1.727.534l3.473-.05s1.815-.112.957-1.554c-.071-.12-.503-1.069-2.585-3.022-2.177-2.043-1.882-1.712.739-5.244 1.597-2.153 2.236-3.468 2.036-4.028-.192-.539-1.365-.399-1.365-.399L20.69.713c-.381.001-.704.119-.851.515-.003.004-.621 1.666-1.445 3.079-1.741 2.989-2.436 3.148-2.724 2.961-.661-.433-.494-1.737-.494-2.664 0-2.897.432-4.105-.846-4.417-.427-.104-.739-.172-1.828-.182-1.392-.021-2.574 0-3.244.329-.445.223-.786.712-.579.74.26.035.843.16 1.155.586.401.552.389 1.789.389 1.789s.229 3.411-.54 3.834c-.528.29-1.25-.302-2.803-3.016-.793-1.388-1.392-2.922-1.392-2.922s-.116-.285-.326-.441c-.25-.185-.6-.244-.6-.244L.848.684S.29.7.085.946c-.182.218-.015.668-.015.668s2.909 6.881 6.203 10.347c3.02 3.182 6.452 2.971 6.452 2.971h1.555s.469-.054.709-.312c.224-.24.214-.691.214-.691s-.031-2.109.935-2.419z"></path><a href="vk.com" target="_blank"></a>
+              </svg>
+            </div>
+            <div class="social-item facebook">
+              <svg xmlns="http://www.w3.org/2000/svg" width="12" height="22" viewBox="0 0 12 22">
+                <path fill="#FFF" d="M12 4V0H8a4 4 0 0 0-4 4v4H0v4h4v10h4V12h4V8H8V4h4z"></path><a href="facebook.com" target="_blank"></a>
+              </svg>
+            </div>
+            <div class="social-item instagram">
+              <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21">
+                <path fill="#FFF" d="M18 0H3C1.35 0 0 1.35 0 3v15c0 1.65 1.35 3 3 3h15c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3zm-7.5 7c1.93 0 3.5 1.57 3.5 3.5S12.43 14 10.5 14 7 12.43 7 10.5 8.57 7 10.5 7zM18 18H3V9h1.181A6.504 6.504 0 0 0 4 10.5a6.5 6.5 0 1 0 13 0 6.45 6.45 0 0 0-.181-1.5H18v9zm0-11h-4V3h4v4z"></path><a href="instagram.com" target="_blank"></a>
+              </svg>
+            </div>
+          </section>
           <p>Обратная связь</p><a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a><a href="https://htmlacademy.ru/intensive/htmlcss" target="_blank">Разработано htmlacademy.ru</a>
         </div>
       </div>
