--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
   <body class="page">
     <header class="page-header">
       <div class="top-row">
-        <div class="container">
+        <div class="container catalog">
           <div class="logo-top"><a href="index.html"><img src="img/logo-technomart.svg" alt="logo"></a></div>
           <div class="search">
             <form action="search.html" method="get">
@@ -21,8 +21,8 @@
               </label>
             </form>
           </div>
-          <div class="bookmarks"><a class="bookmark-icon" href="">закладки:</a><span>0</span></div>
-          <div class="cart"><a class="cart-icon" href="">корзина:</a><span>10</span></div><a class="order" href="">оформить заказ</a>
+          <div class="bookmarks"><a class="bookmark-icon" href="">Закладки:</a><span>0</span></div>
+          <div class="cart"><a class="cart-icon" href="">Корзина:</a><span>10</span></div><a class="order" href="">Оформить заказ</a>
         </div>
       </div>
       <div class="container">
@@ -39,7 +39,7 @@
           </div>
           <div class="authorization">
             <div class="user-login">
-              <p class="user"><a class="customer">Равшан Джамшутович</a><span>
+              <p class="user"><a class="customer" href="">Равшан Джамшутович</a><span>
                   <svg xmlns="http://www.w3.org/2000/svg" width="20" height="18" viewBox="0 0 20 18">
                     <path d="M17.881 14.166c-2.144-.735-4.256-1.666-5.207-2.39-.657-.501-.77-1.618-.517-2.415 1.118-.903 1.864-2.477 1.864-4.278C14.021 2.276 12.221 0 10 0S5.979 2.276 5.979 5.083c0 1.801.746 3.374 1.863 4.277.253.798.141 1.915-.517 2.416-.95.724-3.063 1.654-5.207 2.39S0 18 0 18h20s.025-3.099-2.119-3.834z"></path>
                   </svg></span></p><a class="logout" href="">
@@ -254,11 +254,11 @@
         <div class="container">
           <div class="logo-bottom"><img src="img/logo-technomart.svg" alt="logo"></div>
           <ul class="footer-nav">
-            <li class="footer-nav-item"><a href="">Компания</a></li>
-            <li class="footer-nav-item"><a href="">Новости</a></li>
-            <li class="footer-nav-item"><a href="catalog.html">Каталог</a></li>
-            <li class="footer-nav-item"><a href="">Доставка</a></li>
-            <li class="footer-nav-item"><a href="">Контакты</a></li>
+            <li class="footer-nav-item"><a class="footer-nav-link" href="">Компания</a></li>
+            <li class="footer-nav-item"><a class="footer-nav-link" href="">Новости</a></li>
+            <li class="footer-nav-item"><a class="footer-nav-link" href="catalog.html">Каталог</a></li>
+            <li class="footer-nav-item"><a class="footer-nav-link" href="">Доставка</a></li>
+            <li class="footer-nav-item"><a class="footer-nav-link" href="">Контакты</a></li>
           </ul>
         </div>
       </div>
