--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
               </label>
             </form>
           </div>
-          <div class="bookmarks"><a class="bookmark-icon" href="">закладки:</a><span>0</span></div>
-          <div class="cart"><a class="cart-icon" href="">корзина:</a><span>0</span></div><a class="order" href="">оформить заказ</a>
+          <div class="bookmarks"><a class="bookmark-icon" href="">Закладки:</a><span>0</span></div>
+          <div class="cart"><a class="cart-icon" href="">Корзина:</a><span>0</span></div><a class="order" href="">Оформить заказ</a>
         </div>
       </div>
       <div class="container">
@@ -221,11 +221,11 @@
         <div class="container">
           <div class="logo-bottom"><img src="img/logo-technomart.svg" alt="logo"></div>
           <ul class="footer-nav">
-            <li class="footer-nav-item"><a href="">Компания</a></li>
-            <li class="footer-nav-item"><a href="">Новости</a></li>
-            <li class="footer-nav-item"><a href="catalog.html">Каталог</a></li>
-            <li class="footer-nav-item"><a href="">Доставка</a></li>
-            <li class="footer-nav-item"><a href="">Контакты</a></li>
+            <li class="footer-nav-item"><a class="footer-nav-link" href="">Компания</a></li>
+            <li class="footer-nav-item"><a class="footer-nav-link" href="">Новости</a></li>
+            <li class="footer-nav-item"><a class="footer-nav-link" href="catalog.html">Каталог</a></li>
+            <li class="footer-nav-item"><a class="footer-nav-link" href="">Доставка</a></li>
+            <li class="footer-nav-item"><a class="footer-nav-link" href="">Контакты</a></li>
           </ul>
         </div>
       </div>
